--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,22 @@
 <footer class="bg-white dark:bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+
+        <div class="details-wrapper" style="display: inline-block;">
+            <details class="accordion-008" style="display: inline-block;">
+                <summary>> 注意事項</summary>
+                <div class="warn-box">
+                    <i class="fa-solid fa-circle-info"></i>
+                    <span>このページは文化祭終了後，速やかに削除されます．</span>
+                </div>
+                <span>- PDF版は<a href="/kiyomiland.pdf">こちら</a>から閲覧できます．</span><br>
+                <span>- ソースコード閲覧をご希望の場合は<a href="https://github.com/t413k/36SchoolFestival/">こちら</a>から閲覧できます．</span><br>
+                <span>* 前日に即席で作ったため，全体的に完成度は低めです...予めご了承ください．</span>
+            </details>
+        </div>
         <div class="sm:flex sm:items-center sm:justify-between">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 - 3612 TAKUTO KOJIMA. & キヨミランド
+            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 - <b><a
+                        href="https://instagram.com/t.413.k/">3612 TAKUTO KOJIMA.</a></b> & キヨミランド
             </span>
         </div>
     </div>
