--- a/header.html
+++ b/header.html
@@ -1,12 +1,20 @@
 <header id="header">
-    <h1 class="logo"><a href="/">3-6キヨミランド</a></h1>
-    <nav>
-        <ul class="nav__list">
-            <li class="nav__item">
-                <a href="/index.php" class="page_top_btn">
-                    HOME
-                </a>
-            </li>
-        </ul>
-    </nav>
+    <div class="notify_bar">
+        <div class="notify_bar-content">
+            <i class="fa-solid fa-circle-info"></i>
+            <span>閉店中です．(開店 8:40~)</span>
+        </div>
+    </div>
+    <div class="header_main">
+        <h1 class="logo"><a href="/">3-6キヨミランド</a></h1>
+        <nav>
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="/index.php" class="page_top_btn">
+                        HOME
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
