--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <div class="notify_bar">
         <div class="notify_bar-content">
             <i class="fa-solid fa-circle-info"></i>
-            <span>閉店中です．(開店 8:40~)</span>
+            <span>閉業しました．ご愛顧ありがとうございました！</span>
         </div>
     </div>
     <div class="header_main">
@@ -18,3 +18,19 @@
         </nav>
     </div>
 </header>
+
+        <div class="warn-box notify-box">
+        <i class="fa-solid fa-circle-info"></i>
+        <span>2日観間大変ありがとうございました！<br/>本ページは23:59に消去されます．<br/>また機会がありましたらぜひお越しくださいませ！<br>それまでは引き続きご覧いただけます．</span>
+        </div>
+
+        <div class="warn-box notify-box">
+        <i class="fa-solid fa-circle-info"></i>
+                <span>ソースコード閲覧(仕組み)をご希望の場合は<a href="https://github.com/t413k/36SchoolFestival/">こちら</a>から閲覧できます．</span><br>
+        </div>
+
+<div>
+    <h2>開発者より</h2>
+    <p>本サービスをご利用いただき大変ありがとうございました．皆様の役に立てたことに大変うれしく思います。<br>さて，私は今高校3年生であるので受験勉強を頑張らねばなりません．<br />が，終わり次第またこのように皆様の役に立てるようなアプリを開発してまいります．ぜひこのサイトに1年後お越しください！！！きっと何かアプリが公開されていると思います！(起業しているかも...?)<br>プログラミングは一見難しそうですがなれると本当に面白いものです．情報科志望の方もそうでない方もよりITに興味をもっていただけると嬉しいです．<br>本当にありがとうございました！！それではまたどこかでお会いしましょう！
+    </p>
+</div>
