--- a/config.html
+++ b/config.html
@@ -1,6 +1,16 @@
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="/css/pico.min.css">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/style.css?20240907">
 <script src="https://kit.fontawesome.com/f4a9000eb9.js" crossorigin="anonymous"></script>
 <script src="/script/script.js" crossorigin="anonymous"></script>
 <link rel="icon" href="/favicon.ico">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3PDSXQ6ZJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E3PDSXQ6ZJ');
+</script>
